<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory
        android:key=""
        android:title="@string/pref_category_user_title">
        <android.support.v7.preference.EditTextPreference
            android:dialogIcon="@drawable/ic_pref_user_id"
            android:icon="@drawable/ic_pref_user_id"
            android:inputType="textVisiblePassword"
            android:key="@string/pref_user_id_key"
            android:summary="@string/pref_user_id_summary"
            android:title="@string/pref_user_id_title" />
        <android.support.v7.preference.EditTextPreference
            android:dialogIcon="@drawable/ic_pref_user_token"
            android:icon="@drawable/ic_pref_user_token"
            android:inputType="textPassword"
            android:key="@string/pref_user_token_key"
            android:summary="@string/pref_user_token_summary"
            android:title="@string/pref_user_token_title" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>